add edit and delete logic

--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,8 @@
     "development"
   ],
   "hints": {
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/forms": "off",
+    "axe/name-role-value": "off"
   }
 }
